implementação de metodo de resposta de quizes. Toda a lógica para calculo de respostas eh feita aqui. Além disso, foram feitas correcoes envolvendo dtos que não expunham dados necessários ao projeto